@@ -218,7 +218,6 @@ void CDC_Host_Task(void)
 		case HOST_STATE_Configured:
 			/* Select the data IN pipe */
 			Pipe_SelectPipe(CDC_DATAPIPE_IN);
-			Pipe_SetPipeToken(PIPE_TOKEN_IN);
 			Pipe_Unfreeze();
 
 			/* Check to see if a packet has been received */
