@@ -65,7 +65,8 @@ char PROGMEM HTTPPage[]   =
 		"	<body>"
 		"		<h1>Hello from your USB AVR!</h1>"
 		"		<p>"
-		"			Hello! Welcome to the LUFA RNDIS Demo Webserver test page, running on your USB AVR via the LUFA library. This demonstrates the HTTP webserver, TCP/IP stack and RNDIS demo all running atop the LUFA USB stack."
+		"			Hello! Welcome to the LUFA RNDIS Demo Webserver test page, running on your USB AVR via the LUFA library and uIP TCP/IP network stack. This"
+		"           demonstrates a simple HTTP webserver serving out pages to HTTP clients."
 		"			<br /><br />"
 		"			<small>Project Information: <a href=\"http://www.fourwalledcubicle.com/LUFA.php\">http://www.fourwalledcubicle.com/LUFA.php</a>.</small>"
 		"			<hr />"
