@@ -45,6 +45,7 @@
   *  - Fixed Benito project not resetting the target AVR automatically when programming has completed
   *  - Fixed DFU bootloader programming not discarding the correct number of filler bytes from the host when non-aligned programming
   *    ranges are specified (thanks to Thomas Bleeker)
+  *  - Fixed CDC and RNDIS host demos and class drivers - bidirectional endpoints should use two seperate pipes, not one half-duplex pipe
   *
   *  \section Sec_ChangeLog091223 Version 091223
   *
